--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -74,7 +74,9 @@
 // =======================================MENU===============================
 .menu-on-home{
     width: 100%;
+    box-sizing: border-box;
     display: flex;
+    justify-content: space-between;
     // max-width: 960px;
     // min-width: 430px;
     margin: auto;
