--- a/src/app/brick/brick-modal/brick-modal.component.html
+++ b/src/app/brick/brick-modal/brick-modal.component.html
@@ -16,9 +16,9 @@
       </mat-select>
     </mat-form-field>
   
-    <mat-input-container>
+    <mat-form-field>
       <textarea matInput placeholder="Description" formControlName="description"></textarea>
-    </mat-input-container>
+    </mat-form-field>
 
     <div class="button-container">
       <button mat-raised-button color="primary" 
