--- a/src/app/brick/brick-modal/brick-modal.component.scss
+++ b/src/app/brick/brick-modal/brick-modal.component.scss
@@ -9,7 +9,7 @@
     align-items: left;
     flex-direction: column;
     align-items: stretch;
-    mat-input-container {
+    mat-form-field {
         width: 100%;
     }
 }
