--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -87,6 +87,9 @@
     button{
         font-size: 20px;
     }
+    .logo{
+        font-size: 24px;
+    }
 }
 
 // ================================ FIRST SCREEN ===========================
