--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,10 +2,13 @@
 <div class="main-app">
     <mat-toolbar color="primary" class="toolbar-container" *ngIf="router.url != '/home'">
         <div class="left-area-menu">
-            <button mat-button routerLink="/home" class="logo"><mat-icon>home</mat-icon>Make my mind</button>
-            <button mat-button routerLink="/wall" *ngIf="authService.CurrentUser">Стена</button>
-            <button mat-button routerLink="/category" *ngIf="authService.CurrentUser">Категории</button>
-            <button mat-button routerLink="/brickType" *ngIf="authService.CurrentUser">Цели</button>
+            <button mat-button routerLink="/home" >
+                <mat-icon>home</mat-icon>
+                <span class="logo"> Make my mind</span>
+            </button>
+            <button mat-button routerLink="/wall" *ngIf="authService.CurrentUser">{{'Wall' | translate }}</button>
+            <button mat-button routerLink="/category" *ngIf="authService.CurrentUser">{{'Category' | translate }}</button>
+            <button mat-button routerLink="/brickType" *ngIf="authService.CurrentUser">{{'Goals' | translate }}</button>
         </div>
 
         <div class="rigth-area-menu">
@@ -14,6 +17,9 @@
                 <button mat-menu-item>{{authService.CurrentUser.nickname}}</button>
                 <button mat-menu-item>{{authService.CurrentUser.created}}</button>
             </mat-menu>
+
+            <button mat-button (click)="swithcLanguage('ru')" >ru</button>
+            <button mat-button (click)="swithcLanguage('en')" >en</button>
 
             <button mat-button (click)="logout()" *ngIf="authService.CurrentUser">Выйти</button>
             <button mat-button *ngIf="!authService.CurrentUser" routerLink="/auth">Войти</button>
