--- a/src/app/auth/auth.component.scss
+++ b/src/app/auth/auth.component.scss
@@ -8,7 +8,7 @@
             justify-content: space-between;
             align-items: center;
             flex-direction: column;
-            mat-input-container { 
+            mat-form-field { 
                 width: 60%;
                 margin: 0 10px;
             }
