--- a/src/app/brickType/brick-type-details/brick-type-details.component.scss
+++ b/src/app/brickType/brick-type-details/brick-type-details.component.scss
@@ -4,7 +4,7 @@
     align-items: left;
     flex-direction: column;
     align-items: stretch;
-    mat-input-container {
+    mat-form-field {
         width: 100%;
     }
     button {
