--- a/src/app/calendar/calendar.component.scss
+++ b/src/app/calendar/calendar.component.scss
@@ -33,7 +33,9 @@
 }
 .day-today{
     background: rgba(34, 34, 34, 0.712);
-    // background: #6d9fa573;
+}
+.day-weekend{
+    background: rgba(114, 73, 73, 0.712);
 }
 .day-disabled{
     background:  rgba(109, 109, 109, 0.712);
@@ -75,19 +77,27 @@
     border: 1px solid white;
 }
 
-.calendar-buttons{
+.nav-container{
+    width: 100%;
     border: 1px solid rgb(70, 70, 70);
     padding: 5px;
     background: rgba(63, 63, 63, 0.712);
     color: white;
     font-size: 16px;
+}
+.calendar-buttons{    
     width: 100%;
     display: flex;
     .today-btn{
         border-radius: 5px;
         margin-left: 10px;
     }
-
+}
+.week-nav{
+    display: flex;
+    justify-content: space-around;
+    font-size: 16px;
+    padding-top: 5px;
 }
 .today-data{
     line-height: 26px;
