--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,7 +24,29 @@ body {
         color: #ffffff;
     }
 }
+
+// ================================== MENU ============================
+
+.toolbar-container{
+    display: flex;
+    justify-content: space-between;   
+    
+    .logo{
+        font-size: 24px;
+        vertical-align: middle;
+    }
+
+    span{
+        font-family: Helvetica Neue Light,Helvetica Neue,Helvetica,Arial,Lucida Grande,sans-serif;
+        font-size: 18px;
+    }
+}
 // =-========================== Mat-Card ==========================
+.mat-form-field-label-wrapper{
+    label {
+        color: #fff!important;
+    }
+}
 .mat-card {
     background: rgba(34, 34, 34, 0.712);
     color: white;
@@ -166,53 +188,53 @@ canvas{ display: block; vertical-align: bottom; }
     z-index: 2;
 }
 /* ---- particles.js container ---- */ 
-#particles-js
-{ 
-    position: fixed;
-    top: 0px;
-    left: 0px; 
-    z-index: 1;
-    width: 100%; 
-    height: 100%; 
-    //background-color:  #573537; 
-    background-image: url(""); 
-    background-repeat: no-repeat; 
-    background-size: cover; 
-    background-position: 50% 50%; 
-} 
+// #particles-js
+// { 
+//     position: fixed;
+//     top: 0px;
+//     left: 0px; 
+//     z-index: 1;
+//     width: 100%; 
+//     height: 100%; 
+//     //background-color:  #573537; 
+//     background-image: url(""); 
+//     background-repeat: no-repeat; 
+//     background-size: cover; 
+//     background-position: 50% 50%; 
+// } 
 /* ---- stats.js ---- */ 
-.count-particles{ 
-    background: #000022;
-    position: absolute; 
-    top: 48px; 
-    left: 0; 
-    width: 80px; 
-    color: #13E8E9; 
-    font-size: .8em; 
-    text-align: left; 
-    text-indent: 4px; 
-    line-height: 14px; 
-    padding-bottom: 2px; 
-    font-family: Helvetica, Arial, sans-serif; 
-    font-weight: bold; 
-} 
-.js-count-particles{ 
-    font-size: 1.1em; 
-} 
-#stats, .count-particles
-{ 
-    -webkit-user-select: none; 
-    margin-top: 5px; 
-    margin-left: 5px; 
-} 
-#stats
-{ 
-    border-radius: 3px 3px 0 0; 
-    overflow: hidden; 
-} 
-.count-particles{ 
-    border-radius: 0 0 3px 3px; 
-}
+// .count-particles{ 
+//     background: #000022;
+//     position: absolute; 
+//     top: 48px; 
+//     left: 0; 
+//     width: 80px; 
+//     color: #13E8E9; 
+//     font-size: .8em; 
+//     text-align: left; 
+//     text-indent: 4px; 
+//     line-height: 14px; 
+//     padding-bottom: 2px; 
+//     font-family: Helvetica, Arial, sans-serif; 
+//     font-weight: bold; 
+// } 
+// .js-count-particles{ 
+//     font-size: 1.1em; 
+// } 
+// #stats, .count-particles
+// { 
+//     -webkit-user-select: none; 
+//     margin-top: 5px; 
+//     margin-left: 5px; 
+// } 
+// #stats
+// { 
+//     border-radius: 3px 3px 0 0; 
+//     overflow: hidden; 
+// } 
+// .count-particles{ 
+//     border-radius: 0 0 3px 3px; 
+// }
 // ================================ HEXAGON ======================
 .hexagon { 
     margin: 50px 15px;
