--- a/src/app/brickType/brick-type-details/brick-type-details.component.html
+++ b/src/app/brickType/brick-type-details/brick-type-details.component.html
@@ -31,13 +31,13 @@
     <div class="button-container">
       <button mat-raised-button color="primary" 
               [disabled]='brickTypeDetailsForm.invalid'
-              (click)="createBrickType()">Добавить</button>
+              (click)="createBrickType()">{{'Add' | translate}}</button>
       <button mat-raised-button color="primary" 
               *ngIf="brickType && brickType._id"
               [disabled]='brickTypeDetailsForm.invalid'
-              (click)="updateBrickType()">Сохранить</button>
+              (click)="updateBrickType()">{{'Update' | translate}}</button>
       <button mat-raised-button color="warn" 
               *ngIf="brickType && brickType._id"
-              (click)="deleteBrickType()">Удалить</button>
+              (click)="deleteBrickType()">{{'Delete' | translate}}</button>
     </div>
   </form>
