--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -14,9 +14,9 @@
                         <mat-icon>home</mat-icon>
                         <span class="logo">Make my mind</span> 
                     </button>
-                    <button mat-button routerLink="/wall" *ngIf="authService.CurrentUser">Стена</button>
-                    <button mat-button routerLink="/category" *ngIf="authService.CurrentUser">Категории</button>
-                    <button mat-button routerLink="/brickType" *ngIf="authService.CurrentUser">Цели</button>
+                    <button mat-button routerLink="/wall" *ngIf="authService.CurrentUser">{{'Wall' | translate}}</button>
+                    <button mat-button routerLink="/category" *ngIf="authService.CurrentUser">{{'Category' | translate}}</button>
+                    <button mat-button routerLink="/brickType" *ngIf="authService.CurrentUser">{{'Goals' | translate}}</button>
                 </div>
 
                 <div class="rigth-area-menu">
@@ -33,10 +33,13 @@
             <div class="first-screen">
                 <div class="left-home-continer">
                     <div class="main-words">
-                            Саморазвитие - лучшая инвестиция в самого себя. 
+                        Мы – то, что постоянно делаем <br>
+                        И совершенство – не действие, а привычка. <br>
+                        - Аристотель <br>
                     </div>
                     <div class="secondary-words">
-                            Привычки подобны канату. Мы плетем и плетем его изо дня в день, и вскоре его уже невозможно разорвать
+                        Привычки подобны канату. Мы плетем и плетем его изо дня в день, и вскоре его уже невозможно разорвать <br>
+                        — Хорейс Манн
                     </div>
                 </div>
                 <div class="right-home-container">
@@ -130,11 +133,11 @@
                     <div class="category-family text-shadow">C</div>
                 </div>-->
                 <div class="category-sample-name">
-                    <h3>Семья</h3>
+                    <h3 translate>FamalyScopeName</h3>
                 </div>
                 <div class="category-sample-description">
-                    <span>
-                        Все, чего бы ты не достигал, к чему бы не стремился, все это мы делаем ради кого то. Не забывай, что в конце пути с тобой останется твоя семья. 
+                    <span translate>
+                            FamalyScopeDescription
                     </span>
                 </div>
             </div>
@@ -143,11 +146,11 @@
                     <div class="category-icon category-health text-shadow blue-shadow">З</div>
                 </div> -->
                 <div class="category-sample-name">
-                    <h3>Здоровье</h3>
+                    <h3 translate>HealthScopeName</h3>
                 </div>
                 <div class="category-sample-description">
-                    <span>
-                        Многие вспоминают о своем здоровье только когда оно само о себе напомнит. Позаботься о нем заранее, а оно ответит тебе взаимностью.
+                    <span translate>
+                        HealthScopeDescription
                     </span>
                 </div>
             </div>
@@ -156,11 +159,11 @@
                     <div class="category-icon category-hobby text-shadow blue-shadow">Х</div>
                 </div> -->
                 <div class="category-sample-name">
-                    <h3>Хобби</h3>
+                    <h3 translate>HobbyScopeName</h3>
                 </div>
                 <div class="category-sample-description">
-                    <span>
-                        Некоторые люди восхищают, вдохновляют, они становятся интересными. И это из за того, что они увлечены чем-то и не стоят на месте.
+                    <span translate>
+                        HobbyScopeDescription
                     </span>
                 </div>
             </div>
@@ -169,11 +172,12 @@
                     <div class="category-icon category-sport text-shadow blue-shadow">S</div>
                 </div> -->
                 <div class="category-sample-name">
-                    <h3>Спорт</h3>
+                    <h3 translate>SportScopeName</h3>
                 </div>
                 <div class="category-sample-description">
-                    <span>
-                        Тут не нужно много слов. Спорт и закаляет, и воспитывает победителя, и учит добиваться целей, и он нужен для укрепления духа и тела.</span>
+                    <span translate>
+                        SportScopeDescription
+                    </span>
                 </div>
             </div>
             <div class="hexagon category-frends">
@@ -181,11 +185,11 @@
                     <div class="category-icon category-frends text-shadow blue-shadow">F</div>
                 </div> -->
                 <div class="category-sample-name">
-                    <h3>Друзья</h3>
+                    <h3 translate>FrendsScopeName</h3>
                 </div>
                 <div class="category-sample-description">
-                    <span>
-                        Про друзей некоторые люди тоже забывают. Забывают в погоне за счастьем о том, что счастливыми нас также делают и друзья.
+                    <span translate>
+                        FrendsScopeDescription
                     </span>
                 </div>
             </div>
@@ -194,11 +198,11 @@
                     <div class="category-icon category-business text-shadow blue-shadow">B</div>
                 </div> -->
                 <div class="category-sample-name">
-                    <h3>Бизнес</h3>
+                    <h3 translate>BusinessScopeName</h3>
                 </div>
                 <div class="category-sample-description">
-                    <span>
-                        А вот про бизнес уже вправе решать каждый сам. Но наверное каждый из нас задумывался, - "Надо делать что то свое".
+                    <span translate>
+                        BusinessScopeDescription
                     </span>
                 </div>
             </div>
@@ -207,11 +211,11 @@
                     <div class="category-icon category-selfmind text-shadow blue-shadow">M</div>
                 </div> -->
                 <div class="category-sample-name">
-                    <h3>Саморазвитие</h3>
+                    <h3 translate>LearningScopeName</h3>
                 </div>
                 <div class="category-sample-description">
-                    <span>
-                        Мир вокруг не стоит на месте. Так будь же на коне, на пике, будь в тренде, совершенствуйся, выработай привычку читать.
+                    <span translate>
+                        LearningScopeDescription
                     </span>
                 </div>
             </div>
@@ -220,11 +224,11 @@
                     <div class="category-icon category-relax text-shadow blue-shadow">R</div>
                 </div> -->
                 <div class="category-sample-name">
-                    <h3>Отдых</h3>
+                    <h3 translate>RelaxScopeName</h3>
                 </div>
                 <div class="category-sample-description">
-                    <span>
-                        Но и про отдых не забывай. Ведь можно загнать себя и потерять всякий интерес. Сосуд иногда нужно опустошить прежде чем его наполнить. 
+                    <span translate>
+                        RelaxScopeDescription
                     </span>
                 </div>
             </div>
@@ -236,8 +240,8 @@
                     <h3>...</h3>
                 </div>
                 <div class="category-sample-description">
-                    <span>
-                        Или создайте свою категорию. Может у Вас есть мировоззрение, которое достойно быть в отдельной категории.
+                    <span translate>
+                        CustomScopeDescription
                     </span>
                 </div>
             </div>
